# job-aggregator

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
db/: schema.sql
scraper/: conftest.py  docker-compose.yml  main.py  pyproject.toml
scraper/data/: mock_jobs.json
scraper/tests/: test_main.py
worker/: main.py  pyproject.toml
worker/tests/: test_main.py
