[project]
name = "scraper"
version = "0.1.0"
description = "Scraper service: validates and publishes job postings to RabbitMQ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.26.0",
    "pika>=1.4.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
