[project]
name = "worker"
version = "0.1.0"
description = "Worker service: consumes job messages from RabbitMQ and stores them in PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pika>=1.4.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
